Mon Dec 11 14:35:49 EST 2000  Ben Collins <bcollins@debian.org>

  * debsig-verify.c: main(): Better formatting for the
    Selection/Verification verbose output.
  * gpg-parse.c: getKeyID()/getSigKeyID(): Extra verbose output, plus
    formatting.

Mon Dec 11 11:18:56 EST 2000  Ben Collins <bcollins@debian.org>

  * xml-parse.c: increment depthPtr at start of function to get rid of the
    goto
  * debsig-verify.c: checkIsDeb(): new function, functionality moved from
    main().

Mon Dec 11 10:47:49 EST 2000  Ben Collins <bcollins@debian.org>

  * debsig-verify.c: outputUsage(): new function
  * debsig-verify.c: main(): Use it. Also, handle argv[0] better
    (prog_name).
  * gpg-parse.c: gpgVerify(): do not pass --always-trust to gpg.

Fri Dec  8 09:22:05 EST 2000  Ben Collins <bcollins@debian.org>

  * debsig.h:ds_fail_printf: new macro to print DS_LEV_ERR message and
    exit(1). Used throughout now.
  * xml-parse.c: Convert PARSE_ERROR macro to parse_error using proper
    stdarg format.

Thu Dec  7 21:28:40 EST 2000  Ben Collins <bcollins@debian.org>

  * xml-parse.c:clear_policy(): Used to free the memory used by the policy
    struct. Call it after a parse error, and before start of parse.
  * debsig-verify.c:main(): call clear_policy() if we fail, even though
    parsing succeeded.

Thu Dec  7 16:18:56 EST 2000  Ben Collins <bcollins@debian.org>

  * docs/debsig-verify.1.in: Move to here, and generate at build so we get
    the right paths in the file.

Thu Dec  7 13:30:43 EST 2000  Ben Collins <bcollins@debian.org>

  * docs/debsig-verify.1: new file, man page.

Thu Dec  7 10:50:17 EST 2000  Ben Collins <bcollins@debian.org>

  * Added a --use-policy option, which takes the shortname of a policy
    that was listed with --list-policies. Allows the user to specify the
    policy they want to use.

Thu Dec  7 02:24:50 EST 2000  Ben Collins <bcollins@debian.org>

  * debsig-verify.c: Added --list-policies option.
